# blazepod

./: .gitignore  LEARN.md  Makefile  README.md  go.mod  go.sum  sandbox-provider-guide.html
cmd/api/: handlers.go  main.go  scheduler.go
cmd/host-agent/: internal_api.go  main.go  proto_types.go  rootfs_lower_linux.go  server.go
cmd/orchestrator/: main.go  scheduler.go  scheduler_test.go
deploy/: config.example.yaml  inject-vm-agent.sh  linux-host-setup.sh  start.sh
docs/: phase-1-flow.md  phase-2-flow.md  phase-3-flow.md
ebpf/loader/: loader_linux.go  loader_stub.go
ebpf/programs/: egress_filter.c
internal/agentapi/: agentapi.go
internal/cgroup/: cgroup.go
internal/config/: config.go
internal/fencing/: fencing.go
internal/firecracker/: client.go
internal/id/: id.go
internal/log/: log.go
internal/metrics/: metrics.go
internal/network/: network_linux.go  network_stub.go
internal/overlay/: overlay.go  overlay_linux.go  overlay_stub.go
internal/persistence/: persistence.go
internal/pool/: pool.go  pool_test.go
internal/quota/: quota.go  quota_test.go
internal/registry/: registry.go
internal/snapshot/: snapshot.go
internal/spec/: spec.go
internal/state/: state.go  state_test.go
internal/tracing/: tracing.go
internal/vsock/: vsock.go  vsock_linux.go  vsock_stub.go
internal/wireguard/: wireguard_linux.go  wireguard_stub.go
proto/: sandock.proto
sdk/go/sandock/: client.go  client_test.go
sdk/typescript/: package-lock.json  package.json  tsconfig.json
vm-agent/: Cargo.toml
vm-agent/src/: main.rs
(+4 files in other folders)
